Mudança diretório tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
                 "-I${workspaceFolder}/Projeto-C/include",
                 "${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${workspaceFolder}/Projeto-C/bin/main"
             ],
             "options": {
                 "cwd": "${fileDirname}"
